vlc-java/src/main/java/com/tek/vlc/jna/LibvlcLibrary.java

    /**
     * Pause or resume (no effect if there is no media)<br>
     * \param mp the Media Player<br>
     * \param do_pause play/resume if zero, pause if non-zero<br>
     * \version LibVLC 1.1.1 or later<br>
     * Original signature : <code>void libvlc_media_player_set_pause(libvlc_media_player_t*, int)</code><br>
     * <i>native declaration : line 1743</i>
     */
    void libvlc_media_player_set_pause(PointerByReference mp, int do_pause);
    /**
     * Toggle pause (no effect if there is no media)<br>
     * \param p_mi the Media Player<br>
     * Original signature : <code>void libvlc_media_player_pause(libvlc_media_player_t*)</code><br>
     * <i>native declaration : line 1751</i><br>
     * @deprecated use the safer method {@link #libvlc_media_player_pause(com.sun.jna.ptr.PointerByReference)} instead
     */
    @Deprecated 
    void libvlc_media_player_pause(Pointer p_mi);
    /**
     * Toggle pause (no effect if there is no media)<br>
     * \param p_mi the Media Player<br>
     * Original signature : <code>void libvlc_media_player_pause(libvlc_media_player_t*)</code><br>
     * <i>native declaration : line 1751</i>
     */
    void libvlc_media_player_pause(PointerByReference p_mi);
    /**
     * Stop (no effect if there is no media)<br>
     * \param p_mi the Media Player<br>
     * Original signature : <code>void libvlc_media_player_stop(libvlc_media_player_t*)</code><br>
     * <i>native declaration : line 1758</i><br>
     * @deprecated use the safer method {@link #libvlc_media_player_stop(com.sun.jna.ptr.PointerByReference)} instead
     */
    @Deprecated 
    void libvlc_media_player_stop(Pointer p_mi);
    /**
     * Stop (no effect if there is no media)<br>
     * \param p_mi the Media Player<br>
     * Original signature : <code>void libvlc_media_player_stop(libvlc_media_player_t*)</code><br>
     * <i>native declaration : line 1758</i>
     */
    void libvlc_media_player_stop(PointerByReference p_mi);
    /**
     * Set callbacks and private data to render decoded video to a custom area<br>
     * in memory.<br>
     * Use libvlc_video_set_format() or libvlc_video_set_format_callbacks()<br>
     * to configure the decoded format.<br>
     * \param mp the media player<br>
     * \param lock callback to lock video memory (must not be NULL)<br>
     * \param unlock callback to unlock video memory (or NULL if not needed)<br>
     * \param display callback to display video (or NULL if not needed)<br>
     * \param opaque private pointer for the three callbacks (as first parameter)<br>
     * \version LibVLC 1.1.1 or later<br>
     * Original signature : <code>void libvlc_video_set_callbacks(libvlc_media_player_t*, libvlc_video_lock_cb, libvlc_video_unlock_cb, libvlc_video_display_cb, void*)</code><br>
     * <i>native declaration : line 1861</i><br>
     * @deprecated use the safer method {@link #libvlc_video_set_callbacks(com.sun.jna.ptr.PointerByReference, libvlc.LibvlcLibrary.libvlc_video_lock_cb, libvlc.LibvlcLibrary.libvlc_video_unlock_cb, libvlc.LibvlcLibrary.libvlc_video_display_cb, com.sun.jna.Pointer)} instead
     */
    @Deprecated 
    void libvlc_video_set_callbacks(Pointer mp, LibvlcLibrary.libvlc_video_lock_cb lock, LibvlcLibrary.libvlc_video_unlock_cb unlock, LibvlcLibrary.libvlc_video_display_cb display, Pointer opaque);
    /**
     * Set callbacks and private data to render decoded video to a custom area<br>
     * in memory.<br>
     * Use libvlc_video_set_format() or libvlc_video_set_format_callbacks()<br>
     * to configure the decoded format.<br>
     * \param mp the media player<br>
     * \param lock callback to lock video memory (must not be NULL)<br>
     * \param unlock callback to unlock video memory (or NULL if not needed)<br>
     * \param display callback to display video (or NULL if not needed)<br>
     * \param opaque private pointer for the three callbacks (as first parameter)<br>
     * \version LibVLC 1.1.1 or later<br>
     * Original signature : <code>void libvlc_video_set_callbacks(libvlc_media_player_t*, libvlc_video_lock_cb, libvlc_video_unlock_cb, libvlc_video_display_cb, void*)</code><br>
     * <i>native declaration : line 1861</i>
     */
    void libvlc_video_set_callbacks(PointerByReference mp, LibvlcLibrary.libvlc_video_lock_cb lock, LibvlcLibrary.libvlc_video_unlock_cb unlock, LibvlcLibrary.libvlc_video_display_cb display, Pointer opaque);
    /**
     * Set decoded video chroma and dimensions.<br>
     * This only works in combination with libvlc_video_set_callbacks(),<br>
     * and is mutually exclusive with libvlc_video_set_format_callbacks().<br>
     * \param mp the media player<br>
     * \param chroma a four-characters string identifying the chroma<br>
     *               (e.g. "RV32" or "YUYV")<br>
     * \param width pixel width<br>
     * \param height pixel height<br>
     * \param pitch line pitch (in bytes)<br>
     * \version LibVLC 1.1.1 or later<br>
     * \bug All pixel planes are expected to have the same pitch.<br>
     * To use the YCbCr color space with chrominance subsampling,<br>
     * consider using libvlc_video_set_format_callbacks() instead.<br>
     * Original signature : <code>void libvlc_video_set_format(libvlc_media_player_t*, const char*, unsigned, unsigned, unsigned)</code><br>
     * <i>native declaration : line 1884</i><br>
     * @deprecated use the safer methods {@link #libvlc_video_set_format(com.sun.jna.ptr.PointerByReference, java.lang.String, int, int, int)} and {@link #libvlc_video_set_format(com.sun.jna.ptr.PointerByReference, com.sun.jna.Pointer, int, int, int)} instead
     */
    @Deprecated 
    void libvlc_video_set_format(Pointer mp, Pointer chroma, int width, int height, int pitch);
    /**
     * Set decoded video chroma and dimensions.<br>
     * This only works in combination with libvlc_video_set_callbacks(),<br>
     * and is mutually exclusive with libvlc_video_set_format_callbacks().<br>
     * \param mp the media player<br>
     * \param chroma a four-characters string identifying the chroma<br>
     *               (e.g. "RV32" or "YUYV")<br>
     * \param width pixel width<br>
     * \param height pixel height<br>
     * \param pitch line pitch (in bytes)<br>
     * \version LibVLC 1.1.1 or later<br>
     * \bug All pixel planes are expected to have the same pitch.<br>
     * To use the YCbCr color space with chrominance subsampling,<br>
     * consider using libvlc_video_set_format_callbacks() instead.<br>
     * Original signature : <code>void libvlc_video_set_format(libvlc_media_player_t*, const char*, unsigned, unsigned, unsigned)</code><br>
     * <i>native declaration : line 1884</i>
     */
    void libvlc_video_set_format(PointerByReference mp, String chroma, int width, int height, int pitch);
    /**
     * Set decoded video chroma and dimensions.<br>
     * This only works in combination with libvlc_video_set_callbacks(),<br>
     * and is mutually exclusive with libvlc_video_set_format_callbacks().<br>
     * \param mp the media player<br>
     * \param chroma a four-characters string identifying the chroma<br>
     *               (e.g. "RV32" or "YUYV")<br>
     * \param width pixel width<br>
     * \param height pixel height<br>
     * \param pitch line pitch (in bytes)<br>
     * \version LibVLC 1.1.1 or later<br>
     * \bug All pixel planes are expected to have the same pitch.<br>
     * To use the YCbCr color space with chrominance subsampling,<br>
     * consider using libvlc_video_set_format_callbacks() instead.<br>
     * Original signature : <code>void libvlc_video_set_format(libvlc_media_player_t*, const char*, unsigned, unsigned, unsigned)</code><br>
     * <i>native declaration : line 1884</i>
     */
    void libvlc_video_set_format(PointerByReference mp, Pointer chroma, int width, int height, int pitch);
    /**
     * Set decoded video chroma and dimensions. This only works in combination with<br>
     * libvlc_video_set_callbacks().<br>
     * \param mp the media player<br>
     * \param setup callback to select the video format (cannot be NULL)<br>
     * \param cleanup callback to release any allocated resources (or NULL)<br>
     * \version LibVLC 2.0.0 or later<br>
     * Original signature : <code>void libvlc_video_set_format_callbacks(libvlc_media_player_t*, libvlc_video_format_cb, libvlc_video_cleanup_cb)</code><br>
     * <i>native declaration : line 1898</i><br>
     * @deprecated use the safer method {@link #libvlc_video_set_format_callbacks(com.sun.jna.ptr.PointerByReference, libvlc.LibvlcLibrary.libvlc_video_format_cb, libvlc.LibvlcLibrary.libvlc_video_cleanup_cb)} instead
     */
    @Deprecated 
    void libvlc_video_set_format_callbacks(Pointer mp, LibvlcLibrary.libvlc_video_format_cb setup, LibvlcLibrary.libvlc_video_cleanup_cb cleanup);
    /**
     * Set decoded video chroma and dimensions. This only works in combination with<br>
     * libvlc_video_set_callbacks().<br>
     * \param mp the media player<br>
     * \param setup callback to select the video format (cannot be NULL)<br>
     * \param cleanup callback to release any allocated resources (or NULL)<br>
     * \version LibVLC 2.0.0 or later<br>
     * Original signature : <code>void libvlc_video_set_format_callbacks(libvlc_media_player_t*, libvlc_video_format_cb, libvlc_video_cleanup_cb)</code><br>
     * <i>native declaration : line 1898</i>
     */
    void libvlc_video_set_format_callbacks(PointerByReference mp, LibvlcLibrary.libvlc_video_format_cb setup, LibvlcLibrary.libvlc_video_cleanup_cb cleanup);
    /**
     * Set the NSView handler where the media player should render its video output.<br>
     * Use the vout called "macosx".<br>
     * The drawable is an NSObject that follow the VLCOpenGLVideoViewEmbedding<br>
     * protocol:<br>
     * @begincode<br>
     * \@protocol VLCOpenGLVideoViewEmbedding <NSObject><br>
     * - (void)addVoutSubview:(NSView *)view;<br>
     * - (void)removeVoutSubview:(NSView *)view;<br>
     * \@end<br>
     * @endcode<br>
     * Or it can be an NSView object.<br>
     * If you want to use it along with Qt4 see the QMacCocoaViewContainer. Then<br>
     * the following code should work:<br>
     * @begincode<br>
     * {<br>
     *     NSView *video = [[NSView alloc] init];<br>
     *     QMacCocoaViewContainer *container = new QMacCocoaViewContainer(video, parent);<br>
     *     libvlc_media_player_set_nsobject(mp, video);<br>
     *     [video release];<br>
     * }<br>
     * @endcode<br>
     * You can find a live example in VLCVideoView in VLCKit.framework.<br>
     * \param p_mi the Media Player<br>
     * \param drawable the drawable that is either an NSView or an object following<br>
     * the VLCOpenGLVideoViewEmbedding protocol.<br>
     * Original signature : <code>void libvlc_media_player_set_nsobject(libvlc_media_player_t*, void*)</code><br>
     * <i>native declaration : line 1936</i><br>
     * @deprecated use the safer method {@link #libvlc_media_player_set_nsobject(com.sun.jna.ptr.PointerByReference, com.sun.jna.Pointer)} instead
     */
    @Deprecated 
    void libvlc_media_player_set_nsobject(Pointer p_mi, Pointer drawable);
